kubernetes/day4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx

  rules:
  - host: web.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-app
            port:
              number: 80

  - host: zack.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zack
            port:
              number: 80
